<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- todo   Need to arrange all these strings and the other two string resource files into some kind of order.-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">Fragment Navigation Drawer</string>
    <string name="search_button_text">Search Plate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="hello_fourth_fragment">Hello fourth fragment</string>
    <string name="hello_fifth_fragment">Hello fifth fragment</string>
    <string name="hello_sub1_fragment">Hello sub1 fragment</string>
    <string name="hello_sub2_fragment">Hello sub2 fragment</string>
    <string name="hello_result_fragment">Hello Result fragment</string>
    <!-- Navigation drawer Header Text -->
    <string name="nav_drawer_header">Select Model</string>
    <!-- MAin Menu item text. -->
    <string name="first_menu_item">LC Torana</string>
    <string name="second_menu_item">LJ Torana</string>
    <string name="third_menu_item">LH Torana</string>
    <string name="fourth_menu_item">LX Torana</string>
    <string name="fifth_menu_item">UC Torana</string>
    <!-- Sub Menu Heading text -->
    <string name="sub_menu_heading">Communication</string>
    <!-- Sub Menu item text -->
    <string name="sub_menu_item1">Share Results</string>
    <string name="sub_menu_item2">Report Error/Provide Feedback</string>
    <string name="lc_model_input">LC82911M</string>
    <string name="lc_body_id_plate_description">Example picture of an LC Body ID plate</string>

    <!-- Email intent strings-->
    <string name="mailto_command">"mailto: "</string>
    <string name="developers_email_address">gundawindy@gmail.com</string>
    <string name="email_subject_line">Feedback for Body Plate Decoder app.</string>
    <string name="email_body_text" />
    <string name="title_displayed_in_email_chooser">Send feedback</string>
    <string name="feedback_message">Thank you for your constructive criticism and improvement ideas.\nWith your feedback, hopefully I can make the app even better.</string>

    <!--LC Model input Spinner-->
    <string name="lc_model_spinner_prompt">LC82911M</string>
    <string-array name="lc_model_list">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!--LC Trim input Spinner-->
    <string name="lc_trim_spinner_prompt">LC82911M</string>
    <string-array name="lc_trim_list">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!--LC Paint input Spinner-->
    <string name="lc_paint_spinner_prompt">LC82911M</string>
    <string name="lc_body_no_hint">02919B</string>
    <string name="social_media_share_text">I hope the results help someone.</string>
    <string-array name="lc_paint_list">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>


</resources>