<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:checked="true"
            android:icon="@drawable/ic_car"
            android:title="@string/first_menu_item" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_car"
            android:title="@string/second_menu_item" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_car"
            android:title="@string/third_menu_item" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_car"
            android:title="@string/fourth_menu_item" />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/ic_car"
            android:title="@string/fifth_menu_item" />
    </group>
    <item android:title="@string/sub_menu_heading">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sub1_fragment"
                    android:icon="@drawable/ic_share"
                    android:title="@string/sub_menu_item1" />
                <item
                    android:id="@+id/nav_sub2_fragment"
                    android:icon="@drawable/ic_email"
                    android:title="@string/sub_menu_item2" />
            </group>
        </menu>
    </item>
</menu>